--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -1,7 +1,15 @@
+<app-header>
+    <p levels>cars</p>
+
+    <div content>
+        <p>Some text</p>
+    </div>
+</app-header>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <table *ngIf="cars.length > 0; else noCarsInfo" class="cs-table table table-striped">
+            <table *ngIf="cars && cars.length > 0; else noCarsInfo" class="cs-table table table-striped">
                 <thead>
                     <tr>
                         <th>car</th>
@@ -15,12 +23,12 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let car of cars; let i = index">
-                        <td [ngClass]="{'row-error': car.isFullyDamaged}">{{ car.model }}</td>
-                        <td>{{ car.plate }}</td>
-                        <td>{{ car.deliveryDate }}</td>
-                        <td>{{ car.deadline }}</td>
-                        <td>{{ car.client.firstName }} {{ car.client.surname }}</td>
-                        <td>{{ car.cost }}</td>
+                        <td [ngClass]="{'row-error': car.isFullyDamaged}">{{ car?.model }}</td>
+                        <td>{{ car?.plate }}</td>
+                        <td>{{ car?.deliveryDate }}</td>
+                        <td>{{ car?.deadline }}</td>
+                        <td>{{ car?.clientFirstName }} {{ car?.clientSurname }}</td>
+                        <td>{{ car?.cost }}</td>
                         <td>Action PLEACEHOLDER</td>
                     </tr>
                 </tbody>     
@@ -38,7 +46,7 @@
         </div>
     </div>
     <app-total-cost #totalCostRef [inputTotalCost]="totalCost" (shownGross)="onShownGross($event)"></app-total-cost>
-    <div class="row" *ngIf="grossCost && visibleGrossCost">
+    <div class="row" *ngIf="cars && grossCost && visibleGrossCost">
         <div class="col-sm-12">
             <div class="total-cost">
                 <p class="text-right">GROSS COST: {{grossCost}} PLN</p>
