--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-sidebar></app-sidebar>
+<div id="content-wrapper">
+    <router-outlet></router-outlet>
+</div>
