--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,2 +1,8 @@
 @import '../assets/style/variables.less';
 
+#content-wrapper{   
+    background: @background;
+    margin: 0 0 0 180px;
+    min-height: 100%;
+    padding: 0;
+}
