Add CarResolve for car details component

--- a/src/app/cars/car-details/car-details.component.html
+++ b/src/app/cars/car-details/car-details.component.html
@@ -1,5 +1,5 @@
 <app-header>
-    <p levels>cars | {{car.model}}</p>
+    <p levels>cars | {{car?.model}}</p>
 
     <div content>
         <p>Some text</p>
