--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -3,3 +3,24 @@
 body{
     background: @white;
 }
+
+.data-header {
+    color: @white;
+    font-size: 22px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 15px;
+}
+
+.data-container {
+    padding: 15px;
+    background: @white;
+    margin: 15px;
+}
+
+.error {
+    background: @red;
+    color: @white;  
+    font-size: 11px;
+    padding: 4px 8px;
+}
