Add remove method

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -29,7 +29,7 @@
                         <td>{{ car?.deadline | date: 'shortDate' }}</td>
                         <td>{{ car?.clientFirstName }} {{ car?.clientSurname | surnameCut }}</td>
                         <td appCsImportant >{{ car?.cost | currency: 'PLN' : true }}</td>
-                        <td>Action PLEACEHOLDER</td>
+                        <td (click)="removeCar(car.id, $event)">( X )</td>
                     </tr>
                 </tbody>     
             </table>
