--- a/src/app/cars/total-cost/total-cost.component.html
+++ b/src/app/cars/total-cost/total-cost.component.html
@@ -1,7 +1,11 @@
 <div class="row">
     <div class="col-sm-12">
         <div class="total-cost">
-            <p class="text-right">TOTAL COST: {{inputTotalCost}} PLN</p>
+            <p class="text-right">
+                <span *ngIf="isCostToLow" class="warrning-totalCost">
+                    WARNING! COST IS LOWER THAN {{ costThreshold }}! 
+                </span>
+                TOTAL COST: {{inputTotalCost}} PLN</p>
         </div>
     </div>
 </div>
