Add validate to add new car

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -117,7 +117,7 @@
             
             <div class="col-sm-4">
                 <label>Is Fully Damaged
-                    <input formControlName="isFullyDamaged" type="checkbox">
+                    <input formControlName="isFullyDamaged" type="checkbox" (change)="togglePlateValidity()">
                 </label>
             </div>
         </div>
