Add custom validators CarsServiceValidators

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -93,7 +93,8 @@
         <div class="row form-group">
             <div class="col-sm-4">
                 <label>Power</label>
-                <input formControlName="power" type="text" class="form-control" placeholder="model">
+                <input formControlName="power" type="number" class="form-control" placeholder="model">
+                <p class="error" *ngIf="carForm.get('power').errors?.power && carForm.get('power').dirty">Power must be between 50 PS and 800 PS.</p>
             </div>
             <div class="col-sm-4">
                 <label>Client Firstname</label>
