Add FormBuilder with part of car

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -123,6 +123,23 @@
             </div>
         </div>
 
+        <div formGroupName="parts" class="row form-group part-group">
+            <div class="col-sm-4">
+                <label>Part name</label>
+                <input formControlName="name" type="text" class="form-control" placeholder="part name">
+            </div>
+            <div class="col-sm-4">
+                <label>Price</label>
+                <input formControlName="price" type="text" class="form-control" placeholder="price">
+            </div>
+            
+            <div class="col-sm-4">
+                <label>Is in stock
+                    <input formControlName="inStock" type="checkbox" >
+                </label>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-sm-12">
                 <button [disabled]="carForm.invalid" type="submit" class="btn btn-danger float-right" (click)="addCar()">Add car</button>
