--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -78,11 +78,11 @@
         <div class="row form-group">
             <div class="col-sm-4">
                 <label>Delivery Date</label>
-                <input formControlName="deliveryDate" type="text" class="form-control" placeholder="model">
+                <input formControlName="deliveryDate" type="date" class="form-control" placeholder="model">
             </div>
             <div class="col-sm-4">
                 <label>Deadline</label>
-                <input formControlName="deadline" type="text" class="form-control">
+                <input formControlName="deadline" type="date" class="form-control">
             </div>
             <div class="col-sm-4">
                 <label>Color</label>
@@ -107,10 +107,6 @@
         </div>
 
         <div class="row form-group">
-            <div class="col-sm-4">
-                <label>Cost</label>
-                <input formControlName="cost" type="text" class="form-control" placeholder="model">
-            </div>
             <div class="col-sm-4">
                 <label>Year</label>
                 <input formControlName="year" type="text" class="form-control" placeholder="yesr">
