--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,9 +5,7 @@
       <form class="form-signin">
         <input [(ngModel)]="login" name="login" type="text" id="inputEmail" class="form-control" placeholder="Login">
         <input [(ngModel)]="password" name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" >
-        <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+        <button (click)="onSumbmit()" class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
       </form>
     </div>
   </div>
-  
-  <p>{{login}} {{password}}</p>
