--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-sidebar></app-sidebar>
-<div id="content-wrapper">
+<app-sidebar *ngIf="isSidebarVisible"></app-sidebar>
+<div class="content-wrapper" [ngClass]="{ 'content-wrapper-login-view' : !isSidebarVisible}">
     <router-outlet></router-outlet>
 </div>
