--- a/src/app/coreModule/sidebar/sidebar.component.html
+++ b/src/app/coreModule/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
             <li [routerLink]="['/cars']" [routerLinkActive]="'active'">cars</li>
             <li>menu item 1</li>
             <li>menu item 2</li>
-            <li>menu item 3</li>
+            <li (click)="logOut()">LOGOUT</li>
         </ul>
     </nav>
 </div>
