--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <div class="content-wrapper" [ngClass]="{ 'content-wrapper-login-view' : !isSidebarVisible}">
     <router-outlet></router-outlet>
 </div>
+
+<div class="spinner" *ngIf="isLoading"></div>
