Add wildCard,  @hostBinding and Renderer2

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -54,7 +54,7 @@
     </div>
 </div>
 
-<p class="data-header">Add new car</p>
+<p class="data-header" #addCarTitle>Add new car</p>
 
 <div class="data-container">
     <form [formGroup]="carForm">
