Add scroll top btn

--- a/src/app/cars/car-table-row/car-table-row.component.html
+++ b/src/app/cars/car-table-row/car-table-row.component.html
@@ -4,4 +4,4 @@
 <td>{{ car?.deadline | date: 'shortDate' }}</td>
 <td>{{ car?.clientFirstName }} {{ car?.clientSurname | surnameCut }}</td>
 <td appCsImportant >{{ car?.cost | currency: 'PLN' : true }}</td>
-<td (click)="removeCar(car?.id, $event)">( X )</td>
+<td (click)="removeCar(car?.id, $event)" class="remove-btn">( X )</td>
