--- a/src/assets/style/base.less
+++ b/src/assets/style/base.less
@@ -24,3 +24,17 @@ body{
     font-size: 11px;
     padding: 4px 8px;
 }
+
+.scroll-top-btn{
+    position: fixed;
+    background: lightseagreen;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 5px;
+    height: 30px;
+    width: 30px;
+    display: none;
+    text-align: center;
+    cursor: pointer;
+    color: white;
+}
